# ChangeLog for dev-db/sqlite
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/sqlite/ChangeLog,v 1.232 2009/04/14 02:30:13 arfrever Exp $

*sqlite-3.6.13 (14 Apr 2009)

  14 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  metadata.xml, +sqlite-3.6.13.ebuild:
  Version bump.

  07 Apr 2009; Tobias Klausmann <klausman@gentoo.org> sqlite-3.6.11.ebuild:
  Stable on alpha, bug #264514

  05 Apr 2009; Markus Meier <maekke@gentoo.org> sqlite-3.6.11.ebuild:
  amd64/x86 stable, bug #264514

  04 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  sqlite-3.6.11.ebuild, sqlite-3.6.12.ebuild:
  Fix typo in src_test().

  04 Apr 2009; Brent Baude <ranger@gentoo.org> sqlite-3.6.11.ebuild:
  Marking sqlite-3.6.11 ppc for bug 264514

  04 Apr 2009; Brent Baude <ranger@gentoo.org> sqlite-3.6.11.ebuild:
  stable ppc64, bug 264514

  01 Apr 2009; Mike Frysinger <vapier@gentoo.org> sqlite-3.6.12.ebuild:
  Upstream changed the released tarball.

*sqlite-3.6.12 (01 Apr 2009)

  01 Apr 2009; Mike Frysinger <vapier@gentoo.org> +sqlite-3.6.12.ebuild:
  Version bump.

  31 Mar 2009; Mike Frysinger <vapier@gentoo.org> sqlite-3.6.11.ebuild:
  Cleanup ebuild a bit and avoid running autotools.

*sqlite-3.6.11 (01 Mar 2009)

  01 Mar 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +files/sqlite-3.6.11-reference.patch, +sqlite-3.6.11.ebuild:
  Version bump

  26 Feb 2009; Brent Baude <ranger@gentoo.org> sqlite-3.6.10.ebuild:
  stable ppc64, bug 259462

  21 Feb 2009; Jeroen Roovers <jer@gentoo.org> sqlite-3.6.10.ebuild:
  Stable for HPPA (bug #259462).

  20 Feb 2009; Raúl Porcel <armin76@gentoo.org> sqlite-3.6.10.ebuild:
  alpha/arm/ia64/s390/sh/x86 stable wrt #259462

  19 Feb 2009; nixnut <nixnut@gentoo.org> sqlite-3.6.10.ebuild:
  ppc stable #259462

  18 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  files/sqlite-3.6.10-tcl-install.patch: