@@ -21,7 +21,7 @@ DIST sqlite_docs_3_6_6.zip 2213432 RMD160 d23672a3074d38ae1501dce57cc0558abc6d57
 EBUILD sqlite-3.6.10.ebuild 2404 RMD160 fe95b84bbef89fd2968b7709e841fe11af58009f SHA1 99dec5325c3537d3b2d5c45d7d3cb6a6bb27f2f6 SHA256 2012bc8a9f460051aa482d996d916b37d9c479aabf6b190af19186101444f94f
 EBUILD sqlite-3.6.11.ebuild 2680 RMD160 8e56084c3802275576eeb67698d204e87062f74d SHA1 ba17cf34a330675de28c60986498ebb7b967888b SHA256 5e149fd8a16ee79ccc52d30884cb8b83b7993562c3f9f1ae3740eabda0a9a281
 EBUILD sqlite-3.6.12.ebuild 2505 RMD160 fd4f647ccca6e541e60cef7133e60e31adc529df SHA1 7d5634916c8169cd9af7f9057d6238b429a487a2 SHA256 0f96cdb6d8cfba7a3c9a02a72bdb50d3ca35bd3cc23246a4f88d794f851cea92
-EBUILD sqlite-3.6.13.ebuild 2505 RMD160 5bc9ec1ceb9a87c8c4f22d1939c459466cf46308 SHA1 87ee32ec434b27de8ed666f871cc5085db4a3ec7 SHA256 a3970c42cea2fcd6712977c7860e2c99cead86e9b915fbb2ba6e972d86002d4c
+EBUILD sqlite-3.6.13.ebuild 2594 RMD160 50281ad4b290a5eac22bde30fb8d5956521273ce SHA1 24ac7b1e93e537ee73cf1175c6ecfb4533785ac3 SHA256 95be4583d4862ed9d504cd46e685a7b3a26da32545b9a4a5ddfb6bc57756eb88
 EBUILD sqlite-3.6.6.2.ebuild 2437 RMD160 c0c9a8e81ffa1267bf965c8d9bd6d793924a3a85 SHA1 4a8f89245916417b670522e9f9051c47874cedca SHA256 85ed2701bdf00f5d6617484df29b7afea7153094802334e74951be4830e3e6e7
-MISC ChangeLog 31834 RMD160 9a5ec98f8c074d37eaa33516de5ea6ffb53a9e99 SHA1 268d73e6399a0d56df6cb9971d2d470a9665dd74 SHA256 0b3bf502d97acc4ddb36679f50e2afe20afe1de503a2af99da259f9b6b62e889
+MISC ChangeLog 31965 RMD160 a3ccd6654921410746b36215f74f2978d663cb6a SHA1 b33026bfdcecb0eaacfce8be57045f9ff0f3a696 SHA256 44855b1df8db1dd4509acf95e52af0b3bf0c78660d980bed3677a52cc68d8bb2
 MISC metadata.xml 577 RMD160 a745dafa141324b8328d6b154f31f1d01dfadd03 SHA1 bb56f3d690313b6fe5aacd5435cfe43cb98c9c7d SHA256 591c8bef421f7fae9a8a0ad17f23cfc44de90f113c39e143adb17ea84925492f
